[package]
name = "telegraph_rs"
version = "0.1.0"
edition = "2021"
authors = ["Junaid Rahman <junaid.cloud2@gmail.com>"]
description = "A Rust wrapper for the Telegraph API"
license = "MIT"
repository = "https://github.com/Junaid433/telegraph_rs"

[dependencies]
reqwest = { version = "0.12.22", features = ["json", "blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
url = "2.5.4"